@@ -1,6 +1,7 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
 export(decode_url)
+export(ip_to_numeric)
 export(normalise_ips)
 export(parse_r_agent)
 export(read_aws)
